--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       <div class="text-content">
         <h2 class="title">Order Summary</h2>
         <p class="subtitle">
-          You can now listen to millions of songs, audiobooks, and podcasts on
-          any device anywhere you like!
+          Miljoni
         </p>
         <div class="plan-box">
           <div class="plan-box-left">
